# SUI-vanity

./: Cargo.toml  README.md
src/: main.rs
