[package]
name = "sui-vanity-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["cargo", "string"] }
num_cpus = "1.15.0"
sui-sdk = { git = "https://github.com/MystenLabs/sui.git" }
sui-keys = { git = "https://github.com/MystenLabs/sui.git" }